--- a/.gitignore
+++ b/.gitignore
@@ -43,19 +43,19 @@ test-output
 .vercel
 
 # typescript
-*.tsbuildinfo
-next-env.d.ts
-.next
-public/*.js
-public/sitemap.xml
-public/sitemap-index.xml
-bun.lockb
-sitemap*.xml
-robots.txt
+# *.tsbuildinfo
+# next-env.d.ts
+# .next
+# public/*.js
+# public/sitemap.xml
+# public/sitemap-index.xml
+# bun.lockb
+# sitemap*.xml
+# robots.txt
 
-# Serwist
-public/sw*
-public/swe-worker*
+# # Serwist
+# public/sw*
+# public/swe-worker*
 
 *.patch
 *.pdf
